<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.naijaplanet.magosla.android.moviesplanet.models.Movie" />

        <variable
            name="photo_url"
            type="String" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:fitsSystemWindows="true"
                android:stateListAnimator="@animator/appbar_always_elevated"
                tools:targetApi="lollipop">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    android:theme="@style/Theme.App.AppBarOverlay"
                    app:contentScrim="@color/colorPrimary"
                    app:expandedTitleMarginBottom="20dp"
                    app:expandedTitleMarginEnd="10dp"
                    app:expandedTitleMarginStart="10dp"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:popupTheme="@style/Theme.App.PopupOverlay"
                    app:scrimAnimationDuration="@android:integer/config_mediumAnimTime">

                    <ImageView
                        android:id="@+id/postal_iv"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@{@string/postal_img_description(movie.title)}"
                        android:fitsSystemWindows="true"
                        android:minHeight="100dp"
                        android:scaleType="fitCenter"
                        android:src="@{photo_url}"
                        app:layout_collapseMode="parallax" />

                    <!--suppress AndroidDomInspection -->
                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:shadowColor="@color/colorSecondaryDark"
                        app:layout_collapseMode="pin" />

                </android.support.design.widget.CollapsingToolbarLayout>
            </android.support.design.widget.AppBarLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:fitsSystemWindows="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginTop="5dp"
                    tools:targetApi="o">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_card_detail"
                        android:backgroundTint="@color/color_card_detail"
                        app:cardCornerRadius="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:targetApi="lollipop">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8sp"
                            android:text="@string/label_overview"
                            android:textAllCaps="true"
                            android:textSize="14sp" />

                        <com.naijaplanet.magosla.android.moviesplanet.widget.ExpandableTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22sp"
                            android:padding="8dp"
                            android:text="@{movie.overview}"
                            android:textIsSelectable="true" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_rating"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@color/color_card_detail"
                        android:backgroundTint="@color/color_card_detail"
                        app:cardCornerRadius="0dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/center_divider"
                        app:layout_constraintTop_toBottomOf="@+id/cv_overview"
                        tools:targetApi="lollipop">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8sp"
                            android:text="@string/label_rating"
                            android:textAllCaps="true"
                            android:textSize="14sp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22sp"
                            android:drawableEnd="@drawable/ic_star_gold_16dp"
                            android:drawablePadding="8dp"
                            android:drawableRight="@drawable/ic_star_gold_16dp"
                            android:gravity="center_vertical"
                            android:padding="8dp"
                            android:text="@{@string/text_movie_ratings(movie.voteAverage)}" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_release_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@color/color_card_detail"
                        android:backgroundTint="@color/color_card_detail"
                        app:cardCornerRadius="0dp"
                        app:layout_constraintLeft_toRightOf="@+id/center_divider"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/cv_rating"
                        tools:targetApi="lollipop">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8sp"
                            android:text="@string/label_release_date"
                            android:textAllCaps="true"
                            android:textSize="14sp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22sp"
                            android:drawableLeft="@drawable/ic_date_range_16dp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_date_range_16dp"
                            android:padding="8dp"
                            android:text="@{movie.releaseDate}" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_original_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@color/color_card_detail"
                        android:backgroundTint="@color/color_card_detail"
                        app:cardCornerRadius="0dp"
                        app:layout_constraintTop_toBottomOf="@id/cv_rating"
                        tools:targetApi="lollipop">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8sp"
                            android:text="@string/label_original_title"
                            android:textAllCaps="true"
                            android:textSize="14sp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22sp"
                            android:padding="8dp"
                            android:text="@{movie.originalTitle}"
                            android:textIsSelectable="true" />
                    </android.support.v7.widget.CardView>

                    <View
                        android:id="@+id/center_divider"
                        android:layout_width="2dp"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintLeft_toRightOf="parent"
                        app:layout_constraintRight_toLeftOf="parent" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_related_movies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@color/color_card_detail"
                        android:backgroundTint="@color/color_card_detail"
                        app:cardCornerRadius="0dp"
                        app:layout_constraintTop_toBottomOf="@id/cv_original_title"
                        tools:targetApi="lollipop">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8sp"
                            android:text="@string/label_related_videos"
                            android:textAllCaps="true"
                            android:textSize="14sp" />

                        <FrameLayout
                            android:id="@+id/videos_fragment_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22sp"></FrameLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_movie_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@color/color_card_detail"
                        android:backgroundTint="@color/color_card_detail"
                        app:cardCornerRadius="0dp"
                        app:layout_constraintTop_toBottomOf="@id/cv_related_movies"
                        tools:targetApi="lollipop">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8sp"
                            android:text="@string/label_reviews"
                            android:textAllCaps="true"
                            android:textSize="14sp" />

                        <FrameLayout
                            android:id="@+id/reviews_fragment_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22sp"></FrameLayout>
                    </android.support.v7.widget.CardView>
                </android.support.constraint.ConstraintLayout>
            </android.support.v4.widget.NestedScrollView>


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/action_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_star_gold_16dp"
                app:backgroundTint="@color/transparent"
                app:borderWidth="2dp"
                app:fabSize="auto" />

        </android.support.design.widget.CoordinatorLayout>
        <!--  layout for displaying the full movie postal on screen -->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/fl_full_postal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_black"
            android:fitsSystemWindows="true"
            android:visibility="gone">
            <!-- toolbar for the full movie postal -->
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_postal"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:subtitle="@string/label_movie_postal"
                app:title="@{movie.title}"
                android:shadowColor="@color/colorSecondaryDark"
                android:theme="@style/Theme.App.AppBarOverlay"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:popupTheme="@style/Theme.App.PopupOverlay" />
            <ImageView
                android:id="@+id/iv_full_postal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:contentDescription="@{@string/postal_img_description(movie.title)}"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@{photo_url}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_postal" />
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</layout>